syntax = "proto3";

package model;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

message Pipeline {
  // Custom name for the pipeline.
  string name = 1;
  // The environment to base the pipeline on.
  string initial_environment = 2;
  // The subsequent phases of the pipeline to promote to.
  repeated Phase phases = 3;
  // The time the pipeline was created.
  google.protobuf.Timestamp created_at = 4;
  // The time the pipeline was updated.
  google.protobuf.Timestamp updated_at = 5;
  // User specified description of the pipeline.
  string description = 6;
}

message Phase {
  // Environment to promote to. The project must be active in this environment.
  string environment_id = 1;
  // Fields prefixes to either promote or not.
  FieldPrefixes field_prefixes = 2;
  // Promotion triggers.
  Triggers triggers = 3;
}

message FieldPrefixes {
  // If true, only fields with the specified prefixes will be promoted
  // If false, only fields without the specified prefixes will be promoted
  bool inclusion = 1;
  repeated string prefixes = 2;
}

message Triggers {
  // The automatic trigger
  Trigger automatic = 1;
  // The manual trigger
  Trigger manual = 2;
}

message Trigger {
  // Condition that must be met for the trigger to fire.
  message Condition {
    oneof Condition {
      google.protobuf.Duration time_alive = 1;
    }
  }

  // The conditions that must be met for the trigger to fire.
  repeated Condition conditions = 1;
  // If true, all conditions must be met for the trigger to fire. Otherwise only
  // a single condition must be met.
  bool require_all = 2;
  // If true, the trigger is enabled. Otherwise it is disabled.
  bool enabled = 3;
}